Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: non-admin-api-allow
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: front-end
      ports:
        - protocol: TCP
          port: 80
      to:
        - podSelector:
            matchLabels:
              app: back-end-api
    - from:
        - podSelector:
            matchLabels:
              app: admin-front-end
      ports:
        - protocol: TCP
          port: 80
      to:
        - podSelector:
            matchLabels:
              app: admin-back-end-api

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: front-end
      ports:
        - protocol: TCP
          port: 80
    - to:
        - podSelector:
            matchLabels:
              app: admin-front-end
      ports:
        - protocol: TCP
          port: 80
